Extender Hardening + Documentation
- Extender Test, Leak fixes
- Documentation

Signed-off-by: Mark Hoffmann <m.hoffmann@datainmotion.com>